--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
-<p>
-    Heloo!!!! </br>
-    I'm MochaPen </br>
-    Website will be updated soon!
-</p>
-<img src="bleh.png"/>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            .scrolling-background {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-image: linear-gradient(rgba(41, 41, 41, 0.4), rgba(41, 41, 41, 0.4)), url('assets/tiles.png');
+                background-repeat: repeat;
+                background-size: auto;
+                animation: scrollBackground 10s linear infinite;
+            }
+
+            @keyframes scrollBackground {
+                from {
+                    background-position: 0 0;
+                }
+                to {
+                    background-position: 100% 0;
+                }
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="scrolling-background">
+            <p>
+                Heloo!!!! </br>
+                I'm MochaPen </br>
+                Website will be updated soon!
+            </p>
+            <img src="assets/bleh.png"/>
+        </div>
+    </body>
+</html>
