more page information

--- a/projects.html
+++ b/projects.html
@@ -29,21 +29,27 @@
     </head>
 
     <body>
-        <!-- <audio autoplay id="music"> loop="true" ?
-            <source src="assets/idk5.mp3" type="audio/mpeg">
-        </audio> -->
-
         <div class="scrolling-background">
             <a href="index.html"> Home </a>
             <a href="projects.html"> Projects </a> </br>
+
+            <img src="assets/splodi.png" width="120"/>
             <p>
-                Heloo!!!! </br>
-                I'm MochaPen </br>
-                This is a website made for my portfolio :3 </br> </br>
-                This website is under construction! </br>
-                Website will be updated soon!
+                Splodi is an upcoming indie game about exterminating bugs. </br>
+                This project is in early development. </br>
             </p>
-            <img src="assets/bleh.png"/>
+
+            <img src="assets/overtie.png" width="120"/>
+            <p>
+                Overtie is an upcoming indie game. </br>
+                This project is in early development. </br>
+            </p>
+
+            </br> 
+            <p>
+                This page is under construction! </br>
+                This page will be updated soon!
+            </p>
         </div>
     </body>
 </html>
